--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -11,6 +11,7 @@
 
     .MuiAvatar-root {
       transition: all 0.2s;
+      cursor: pointer;
 
       &:hover {
         transform: scale(1.3);
@@ -65,6 +66,21 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 
+    .selected {
+      .userChat {
+        backdrop-filter: brightness(90%);
+
+        .MuiAvatar-root {
+          transform: scale(1.3);
+          box-shadow: $shadow;
+        }
+      }
+    }
+
+    a {
+      text-decoration: none;
+      color: black;
+    }
     // Chrome, Safari and Opera
     &::-webkit-scrollbar {
       display: none;
